# stardew-npc-dialogue-enhancer

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/evals/: __init__.py  run_eval.py
backend/evals/datasets/: mvp_dialogue_cases.json  mvp_reference_outputs.json
backend/evals/evaluators/: __init__.py  deterministic.py
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 20260713_0001_initial_persistence.py  20260713_0002_memory_partition_state_bounds.py  20260715_0003_player_skill_memory_projection.py  20260715_0004_memory_domains_and_retrieval_state.py
backend/src/stardew_npc_agent/: __init__.py  api.py  config.py  contract_limits.py  dialogue_agent.py  dialogue_context.py  dialogue_repair.py  dialogue_service.py  dialogue_source_policy.py  dialogue_storage.py  dialogue_template.py  dialogue_tools.py  dialogue_usage.py  event_memory_storage.py  event_service.py  generation_key.py  guard.py  main.py  memory_capabilities.py  memory_retrieval.py  model_provider.py  profiles.py  runtime.py  schemas.py  storage.py  storage_models.py  storage_types.py
backend/tests/: conftest.py
backend/tests/contract/: test_contract_fixtures.py  test_npc_registry_fixture.py  test_public_release_hygiene.py  test_synthetic_dialogue_source_manifest.py  test_wire_integer_bounds.py
backend/tests/integration/: test_agent_evidence_reads.py  test_dialogue_agent_service.py  test_dialogue_generation_api.py  test_dialogue_tools_storage.py  test_display_ack.py  test_event_api.py  (+16 more)
(+164 files in other folders)
